--- a/Include/CSS/Style.css
+++ b/Include/CSS/Style.css
@@ -5,6 +5,13 @@
 
 }
 
+.headline {
+    text-align: center;
+    font-family: Poppins;
+    font-size: 35px;
+    font-weight: 600;
+}
+
 .hero{
     background-image: url("../../Images/tree2.jpg");
     background-size:cover;
@@ -65,15 +72,19 @@
     margin: 3rem 0;
 }
 
-.hero-contant-right {
-    object-fit: contain;
+.hero-contant-left a:hover{
+    color: #99ff99;
+    font-size: 17px;
+    padding: 1rem;
+    transition: all .3s ease-out 0s;
 }
 
-.our-project-h2 {
-    text-align: center;
-    font-family: Poppins;
-    font-size: 25px;
-    font-weight: 300;
+.hero-contant-left a:active{
+
+}
+
+.hero-contant-right {
+    object-fit: contain;
 }
 
 .card{
@@ -126,5 +137,112 @@
 }
 
 .card a:hover{
-    color: #99ff99;;
+    color: #99ff99;
+    font-size: 17px;
+    padding: 1rem;
+    transition: all .3s ease-out 0s;
+}
+.card a:active{
+    color: #fff;
+}
+
+.tree-plant p{
+    font-family: Poppins;
+    text-align: center;
+    max-width: 60rem;
+    width: 100%;
+    margin: auto;
+    padding-top: 20px;
+}
+
+.card2{
+    border: 1px;
+    margin: 3rem;
+    padding: 3rem;
+    border-radius: 25px;
+    box-shadow:3px 3px 3px 3px darkgray;
+    padding-bottom: 2rem;
+}
+
+.card2-container h4{
+    font-family: Poppins;
+    text-align: center;
+    font-size: 25px;
+    margin-top: 0;
+}
+
+.tree-plant-con {
+    display: flex;
+    width: 100%;
+    max-width: 60rem;
+    margin: auto;
+    padding-bottom: 3rem;
+}
+.card2-container{
+    text-align: center;
+}
+
+.card p{
+    font-family: Poppins;
+}
+
+.card2 a{
+    line-height:48px;
+	font-weight:500;
+	text-align:center;
+	border: 1px solid var(--primary-color);
+	font-size: 15px;
+	font-family: Poppins;
+	border-radius:50px;
+    padding: 0.8rem;
+	color:#fff;
+	box-shadow: 0px 5px 8px 0px rgb(230, 138, 0 /55%);
+	background-color: var(--primary-color);
+	text-decoration:none;
+    margin: 3rem 0;
+}
+
+.card2 a:hover{
+    color: #99ff99;
+}
+.card2 a:active{
+    color: #fff;
+}
+
+.more-op{
+    color:#009900;
+	font-weight:bold;
+	font-family:Poppins;
+	font-size:25px;
+    padding-bottom: 5rem;
+    padding-top: 0rem;
+    text-align: center;
+}
+
+.more-op a{
+    line-height:48px;
+	font-weight:500;
+	text-align:center;
+	border: 1px solid var(--primary-color);
+	font-size: 15px;
+	font-family: Poppins;
+	border-radius:50px;
+    padding: 0.8rem;
+	color:#fff;
+	box-shadow: 0px 5px 8px 0px rgb(230, 138, 0 /55%);
+	background-color: var(--primary-color);
+	text-decoration:none;
+    margin: 3rem 0;
+}
+
+.more-op a:hover{
+    color: #99ff99;
+    font-size: 17px;
+    padding: 1rem;
+    transition: all .3s ease-out 0s;
+
+}
+.more-op a:active{
+    color: #fff;
+    
 }
