Adding nav links to the pages (not completetd)

--- a/Include/CSS/Style.css
+++ b/Include/CSS/Style.css
@@ -182,6 +182,10 @@
     text-align: center;
 }
 
+.card2-container i{
+    font-size: 50px;
+}
+
 .card p{
     font-family: Poppins;
 }
@@ -245,4 +249,48 @@
 .more-op a:active{
     color: #fff;
     
+}
+
+.contri p{
+    text-align: center;
+}
+
+.vmp-con {
+    display: flex;
+    width: 100%;
+    max-width: 60rem;
+    margin: auto;
+    padding-bottom: 3rem;
+}
+
+.card3{
+    float: center;
+    border: 1px;
+    margin: 3rem;
+    border-radius: 25px;
+    box-shadow:3px 3px 3px 3px darkgray;
+    padding-bottom: 2rem;
+}
+
+.card3-container{
+    text-align: center;
+}
+
+.card3-container i{
+    font-size: 50px;
+}
+
+.card3 p{
+    font-family: Poppins;
+    max-width: 100%;
+    width: 14rem;
+}
+
+.contri p{
+    font-family: Poppins;
+    text-align: center;
+    max-width: 60rem;
+    width: 100%;
+    margin: auto;
+    padding-top: 20px;
 }
