--- a/Include/CSS/Plant A Tree.css
+++ b/Include/CSS/Plant A Tree.css
@@ -64,3 +64,61 @@
     margin: auto;
     padding-top: 20px;
 }
+
+.card2{
+    border: 1px;
+    margin: 3rem;
+    padding: 3rem;
+    border-radius: 25px;
+    box-shadow:3px 3px 3px 3px darkgray;
+    padding-bottom: 2rem;
+}
+
+.card2-container h4{
+    font-family: Poppins;
+    text-align: center;
+    font-size: 25px;
+    margin-top: 0;
+}
+
+.tree-plant-con {
+    display: flex;
+    width: 100%;
+    max-width: 60rem;
+    margin: auto;
+    padding-bottom: 3rem;
+}
+.card2-container{
+    text-align: center;
+}
+
+.card2-container i{
+    font-size: 50px;
+}
+
+.card p{
+    font-family: Poppins;
+}
+
+.card2 a{
+    line-height:48px;
+	font-weight:500;
+	text-align:center;
+	border: 1px solid var(--primary-color);
+	font-size: 15px;
+	font-family: Poppins;
+	border-radius:50px;
+    padding: 0.8rem;
+	color:#fff;
+	box-shadow: 0px 5px 8px 0px rgb(230, 138, 0 /55%);
+	background-color: var(--primary-color);
+	text-decoration:none;
+    margin: 3rem 0;
+}
+
+.card2 a:hover{
+    color: #99ff99;
+}
+.card2 a:active{
+    color: #fff;
+}
