--- a/Include/CSS/Style.css
+++ b/Include/CSS/Style.css
@@ -283,7 +283,8 @@
 .card3 p{
     font-family: Poppins;
     max-width: 100%;
-    width: 14rem;
+    width: 12rem;
+    margin: 1rem;
 }
 
 .contri p{
