--- a/Include/CSS/Style.css
+++ b/Include/CSS/Style.css
@@ -2,7 +2,6 @@
 
 :root {
     --primary-color:#009900;
-
 }
 
 .headline {
@@ -18,6 +17,7 @@
     background-repeat:no-repeat;
     padding-bottom:9rem;
     padding-top:13rem;
+    padding-left: 7rem;
     background-position-y: -197px;
 }
 
@@ -25,7 +25,6 @@
     width: 100%;
     max-width: 80rem;
     margin: auto;
- 
 }
 
 .hero-contant-left {
@@ -73,14 +72,10 @@
 }
 
 .hero-contant-left a:hover{
-    color: #99ff99;
+    color: #fff;
     font-size: 17px;
     padding: 1rem;
     transition: all .3s ease-out 0s;
-}
-
-.hero-contant-left a:active{
-
 }
 
 .hero-contant-right {
@@ -137,7 +132,7 @@
 }
 
 .card a:hover{
-    color: #99ff99;
+    color: #fff;
     font-size: 17px;
     padding: 1rem;
     transition: all .3s ease-out 0s;
@@ -207,7 +202,8 @@
 }
 
 .card2 a:hover{
-    color: #99ff99;
+    color: #009900;
+    background-color:white;
 }
 .card2 a:active{
     color: #fff;
@@ -240,7 +236,7 @@
 }
 
 .more-op a:hover{
-    color: #99ff99;
+    color: #fff;
     font-size: 17px;
     padding: 1rem;
     transition: all .3s ease-out 0s;
@@ -294,4 +290,37 @@
     width: 100%;
     margin: auto;
     padding-top: 20px;
+}
+
+@media screen and (max-width:1000px){
+
+    .hero {
+        padding-top: 9rem;
+        padding-left: 3rem;
+      }
+
+    .hero-contant-left {
+        margin-left: 3rem;
+        margin-right: 2rem;
+    }
+}
+
+@media screen and (max-width:800px){
+    .hero  {
+        padding-top: 7rem;
+        padding-left: 1rem;
+        padding-bottom:9rem;
+        padding-top:8rem;
+        padding-left: 0rem;
+        background-position-y: -97px;
+        background-position-x: -243px
+    }
+
+    .hero-contant-left h2 {
+        font-size: 32px;
+    }
+
+    .hero-contant-left p {
+        font-size: 13px;
+    }
 }
