--- a/Include/CSS/About Us.css
+++ b/Include/CSS/About Us.css
@@ -62,7 +62,8 @@
     max-width: 60rem;
     width: 100%;
     margin: auto;
-    padding-top: 20px;
+    padding-top: 0rem;
+    padding-bottom: 3rem;
 }
 
 .ChairmansMessage{
@@ -70,6 +71,8 @@
     width:100%;
     height: 300px;
     margin:auto;
+    padding-top: 1rem;
+    padding-bottom: 6rem;
 }
 .ChairmansMessage p{
     padding: 0rem 8rem;
