--- a/Include/CSS/Contacts.css
+++ b/Include/CSS/Contacts.css
@@ -11,4 +11,6 @@
         box sizing:border-box;
         margin-top: 6px;
         margin-bottom: 16px;
-        resize: vertical
+        resize: vertical;
+    }
+    
