--- a/Include/CSS/Contacts.css
+++ b/Include/CSS/Contacts.css
@@ -3,14 +3,86 @@
         width: 100%;
         max-width: 40rem;
  }
-    input[type=text], select, textarea {
-        width: 100%;
-        padding: 12px;
-        border: 3px solid;
-        border-radius: 4px;
-        box sizing:border-box;
-        margin-top: 6px;
-        margin-bottom: 16px;
-        resize: vertical;
+    .hero{
+        background-image: url("../../Images/image5.png");
+        filter: brightness(40%);
+        background-size:cover;
+        background-repeat:no-repeat;
+        height:fit-content;
+        padding-bottom:9rem;
+        padding-top:13rem;
+        background-position-y: -197px;
+        opacity: 1;
     }
     
+    .hero .container {
+        width: 100%;
+        max-width: 80rem;
+        margin: auto;
+    }
+    
+    .hero-contant-left {
+        max-width: 40rem;
+        width: 100%;
+    }
+    
+    .hero-contant-left h2{
+        font-family: Poppins;
+        color: #fff;
+        font-size: 43px;
+        line-height: 1.2em;
+        margin-top: -5rem;
+    }
+    
+    .hero .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .hero-contant-left p{
+        font-family: Poppins;
+        font-size: 16px;
+        line-height: 25px;
+        color: #fff;
+        font-style: normal;
+        font-weight: 400;
+    }
+    .get-in-touch{
+        font-family: Poppins;
+        text-align: center;
+        max-width: 60rem;
+        width: 100%;
+        margin: auto;
+        padding-top: 0rem;
+        padding-bottom: 3rem;
+    }
+    input[type=text], select, textarea {
+        width: 100%;
+        padding: 12px; 
+        border: 1px solid rgb(46, 22, 22); 
+        border-radius: 4px; 
+        box-sizing: border-box; 
+        margin-top: 6px; 
+        margin-bottom: 16px; 
+        resize: vertical 
+      }
+      
+    button[type=send] {
+        background-color: #236340;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      
+    button[type=send]:hover {
+        background-color: #438846;
+      }
+      
+    .contact-form {
+        border-radius: 5px;
+        background-color: #e6ebe6;
+        padding: 20px;
+      }
