--- a/Include/CSS/Contacts.css
+++ b/Include/CSS/Contacts.css
@@ -13,23 +13,13 @@
 }
 .contact-form{
     margin-left :100px;
-        width: 100%;
-        max-width: 40rem;
-        margin:4rem;
+    width: 100%;
+    max-width: 40rem;
+    margin:4rem;
  }
-    .hero{
-        background-image: url("../../Images/image5.png");
-        filter: brightness(40%);
-        background-size:cover;
-        background-repeat:no-repeat;
-        height:fit-content;
-        padding-bottom:9rem;
-        padding-top:13rem;
-        background-position-y: -197px;
-        opacity: 1;
-    }
+
     
-    .hero .container {
+.hero .container {
         width: 100%;
         max-width: 80rem;
         margin: auto;
@@ -74,7 +64,7 @@
     input[type=text], select, textarea {
         width: 100%;
         padding: 12px; 
-        border: 1px solid rgb(46, 22, 22); 
+        border: 1px solid rgb(210, 231, 219); 
         border-radius: 4px; 
         box-sizing: border-box; 
         margin-top: 6px; 
@@ -117,17 +107,14 @@
           font-weight:bold;
           color:#e43509;
       }
-=======
 .hero{
-    background-image: url("../../Images/image5.png");
-    filter: brightness(40%);
+    background-image: url("../../Images/tree6.jpg");
     background-size:cover;
     background-repeat:no-repeat;
     height:fit-content;
     padding-bottom:9rem;
     padding-top:13rem;
-    background-position-y: -197px;
-    opacity: 1;
+    background-position-y: -197px;  
 }   
 .hero .container {
     width: 100%;
