--- a/Include/CSS/SchoolAl.css
+++ b/Include/CSS/SchoolAl.css
@@ -1,5 +1,5 @@
 .headline {
-    text-align: right;
+    text-align: center;
     font-family: Poppins;
     font-size: 35px;
     font-weight: 600;
@@ -46,4 +46,12 @@
 	font-style: normal;
 	font-weight: 400;
 }
+.tree-powers p{
+    font-family: Poppins;
+    text-align: center;
+    max-width: 60rem;
+    width: 100%;
+    margin: auto;
+    padding-top: 0rem;
+    padding-bottom: 3rem;
 
