--- a/Include/CSS/SchoolAl.css
+++ b/Include/CSS/SchoolAl.css
@@ -54,4 +54,18 @@
     margin: auto;
     padding-top: 0rem;
     padding-bottom: 3rem;
-
+}
+.deforestration{
+    background-color:rgb(168, 230, 195);
+    width:100%;
+    height: 300px;
+    margin:auto;
+    padding-top: 1rem;
+    padding-bottom: 3rem;
+}
+.deforestration p{
+    padding: 0rem 8rem;
+    max-width: 100%;
+    text-align: center;
+    padding-bottom: 1rem;
+}
