--- a/Include/CSS/Contri2.css
+++ b/Include/CSS/Contri2.css
@@ -6,7 +6,7 @@
 }
 
 .hero{
-    background-image: url("../../Images/tree17.jpg");
+    background-image: url("../../Images/garden.jpg");
     background-size:cover;
     background-repeat:no-repeat;
     padding-bottom:15rem;
