--- a/Include/CSS/Blog.css
+++ b/Include/CSS/Blog.css
@@ -12,7 +12,7 @@
 }
 
 .hero{
-    background-image: url("../../Images/tree1.jpg");
+    background-image: url("../../Images/planting.webp");
     background-size:cover;
     background-repeat:no-repeat;
     padding-bottom:17rem;
