--- a/Include/CSS/Contri2.css
+++ b/Include/CSS/Contri2.css
@@ -28,7 +28,7 @@
 
 .hero-contant-left h2{
 	font-family: Poppins;
-    color: #000;
+    color: #fff;
 	font-size: 43px;
 	line-height: 1.2em;
     margin-top: -5rem;
